--- a/app/views/notes/index.html.erb
+++ b/app/views/notes/index.html.erb
@@ -1,5 +1,9 @@
-<h1 class="title">Create a new note</h1>
-<%= render 'form' %>
+<section class="section">
+  <h1 class="title">Create a new note</h1>
+  <%= render 'form' %>
+</section>
 
-<h1 class="title">Notes of <%= current_user.email %></h1>
-<%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+<section class="section">
+  <h1 class="title">Notes of <%= current_user.email %></h1>
+  <%= link_to('Logout', destroy_user_session_path, method: :delete) %>
+</section>
